--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "build-your-own-blockchain-crytpocurrency"]
 	path = build-your-own-blockchain-crytpocurrency
 	url = git@github.com:iskanderandrews/build-your-own-blockchain-crytpocurrency.git
+[submodule "build-your-own-network-stack"]
+	path = build-your-own-network-stack
+	url = git@github.com:iskanderandrews/build-your-own-network-stack.git
